update Readme file

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Getting Started Example",
-  "description": "Build an Extension!",
+  "name": "Hide Whatsapp Sidebar",
+  "description": "Hide Whatsapp Sidebar",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
