--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: [ZakariaMahmoud]
-custom: custom: ["https://www.paypal.me/zakariaforwork"]
+custom: ["https://www.paypal.me/zakariaforwork", mahmoud.ma]
