--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Hide Whatsapp Sidebar",
-  "description": "Hide Whatsapp Sidebar",
+  "name": "Whatsapp Web Config",
+  "description": "Add more tools and options for WhatsApp Web for more privacy and reliability.",
   "version": "1.0",
   "manifest_version": 3,
   "permissions": [
